--- a/assets/sass/pages/_portfolio.scss
+++ b/assets/sass/pages/_portfolio.scss
@@ -22,6 +22,9 @@
 #portfolio-list{
 	margin: 0;
 	padding: 0;
+	.padding0 article{
+		margin: 0;
+	}
 	article{
 		margin-top: 15px;
 		margin-bottom: 15px;
